# revenue_prediction_project

./: .gitignore  README.md  Revenue Prediction Update.ipynb  Revenue Prediction with Cohort Analysis and BART.ipynb  SLG_analysis.ipynb  [Answers] WUFC Quant Finance - Shifted Beta Geometric Customer Retention.xlsx  deep_ocean_bart.py  forward_revenue_calculation.xlsm  project_utils.py  pyproject.toml  test_script.py  ~$forward_revenue_calculation.xlsm
Past Notebooks/: [Week 6] BG_NBD_Gamma_Gamma_revisited.ipynb
