[tool.poetry]
name = "deep ocean - bart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
ipywidgets = "^8.1.5"
pymc-bart = "^0.8.2"
pytensor = "^2.16"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
