[tool.poetry]
name = "deep ocean - bart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
ipywidgets = "^8.1.5"
pymc-bart = "^0.8.2"
pytensor = "^2.16"
graphviz = "^0.20.3"
statsmodels = "^0.14.4"
pmdarima = "^2.0.4"
numpyro = "^0.16.1"
flax = "^0.10.2"
jax = "^0.4.38"
setuptools = "^75.6.0"
aesara = "^2.9.4"
lifetimes = "^0.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
